@@ -1,6 +1,7 @@
 2007-10-31  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* \NoSelect folders should never get a STATUS request, fixed
+	* Documentation clarification about priority and flags
 
 2007-10-30  Philip Van Hoof  <pvanhoof@gnome.org>
 
